@@ -1,12 +1,15 @@
 package com.shop.core.security;
 
+import com.shop.domains.userRoles.UserRolesEntity;
 import com.shop.domains.users.UserDto;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+import java.util.Set;
 
 public class MyUserDetails implements UserDetails {
 
@@ -18,7 +21,10 @@ public class MyUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(userDto.getRoles().toString()));
+        Set<UserRolesEntity> entity = userDto.getRoles();
+        ArrayList<UserRolesEntity> userRolesEntityArrayList = new ArrayList<>(entity);
+        String role = userRolesEntityArrayList.get(0).getRoles().getName();
+        return List.of(new SimpleGrantedAuthority(role));
     }
 
     @Override
